Date_computation/bug_fixing_log.txt

ERROR 1:
In file included from proj1_driver.cpp:3:0:       
proj1.h:9:5: error: 'string' does not name a type 
     string month;
     ^~~~~~
proj1.h:10:5: error: 'string' does not name a type
     string days;
     ^~~~~~

STATUS: Resolved
EXPLAINATION: I did not include string header file



ERROR 2:
proj1.cpp:1:17: fatal error: format: No such file or directory
 #include<format>
                 ^
compilation terminated.

STATUS:Resolved
EXPLAINATION:I tried to format string using format header file but I handled using "cout"



ERROR 3:
terminate called after throwing an instance of 'std::invalid_argument'
  what():  stoi

STATUS:Resolved
EXPLAINATION:I was trying to convert non-integer string to integer, as I took wrong index of string this error was thrown by compiler I resolved this issue




ERROR 4:
proj1.h:20:18: error: 'ifstream' has not been declared
     void compute(ifstream &in);
                  ^~~~~~~~
proj1.cpp:123:8: error: prototype for 'void Date2023::compute(std::fstream&)' does not match any in class 'Date2023'
   void Date2023:: compute(fstream &in)
        ^~~~~~~~
In file included from proj1.cpp:3:0:
proj1.h:20:10: error: candidate is: void Date2023::compute(int&)
     void compute(ifstream &in);
          ^~~~~~~
In file included from proj1.cpp:3:0,
                 from proj1_driver.cpp:3:
proj1.h:20:18: error: 'ifstream' has not been declared
     void compute(ifstream &in);
                  ^~~~~~~~
In file included from proj1_driver.cpp:3:0:
   void Date2023:: compute(fstream &in)
        ^~~~~~~~
In file included from proj1.cpp:3:0,
                 from proj1_driver.cpp:3:
proj1.h:20:10: error: candidate is: void Date2023::compute(int&)
     void compute(ifstream &in);
          ^~~~~~~
proj1_driver.cpp: In function 'int main()':
proj1_driver.cpp:18:16: error: no matching function for call to 'Date2023::compute(std::ifstream&)'
   d4.compute(in);
                ^
In file included from proj1.cpp:3:0,
                 from proj1_driver.cpp:3:
proj1.h:20:10: note: candidate: void Date2023::compute(int&)
     void compute(ifstream &in);
          ^~~~~~~

STATUS :Resolved
EXPLAINATION: I tried using function "compute" to read a file but it did not work so I read the file in driver code itself.